JumpScript/tests/baselines/reference/constDeclarations-access5.errors.txt
tests/cases/compiler/constDeclarations_access_2.jump(4,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(5,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(6,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(7,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(8,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(9,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(10,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(11,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(12,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(13,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(14,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(15,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(17,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(18,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(19,5): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(20,5): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(22,7): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
tests/cases/compiler/constDeclarations_access_2.jump(24,3): error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.


==== tests/cases/compiler/constDeclarations_access_2.jump (18 errors) ====
    ///<reference path='constDeclarations_access_1.jump'/>
    import m = require('constDeclarations_access_1');
    // Errors
    m.x = 1;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x += 2;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x -= 3;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x *= 4;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x /= 5;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x %= 6;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x <<= 7;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x >>= 8;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x >>>= 9;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x &= 10;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x |= 11;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x ^= 12;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m
    m.x++;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    m.x--;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    ++m.x;
        ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    --m.x;
        ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    
    ++((m.x));
          ~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    
    m["x"] = 0;
      ~~~
!!! error TS2540: Cannot assign to 'x' because it is a constant or a read-only property.
    
    // OK
    var a = m.x + 1;
    
    function f(v: number) { }
    f(m.x);
    
    if (m.x) { }
    
    m.x;
    (m.x);
    
    -m.x;
    +m.x;
    
    m.x.toString();
    
==== tests/cases/compiler/constDeclarations_access_1.jump (0 errors) ====
    export const x = 0;
    